[gd_scene load_steps=7 format=2]

[ext_resource path="res://Animations/Monster_Summoning.tscn" type="PackedScene" id=1]
[ext_resource path="res://Animations/TreeDestruction.tscn" type="PackedScene" id=2]
[ext_resource path="res://Animations/MovingRockAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Animations/FarmDestruction.tscn" type="PackedScene" id=4]
[ext_resource path="res://Animations/BarsSummonning.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/IntroCutscene.gd" type="Script" id=6]

[node name="IntroCutscene" type="Node2D"]
script = ExtResource( 6 )

[node name="Monster_Summoning" parent="." instance=ExtResource( 1 )]
visible = false

[node name="BarsSummonning" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MovingRockAnimation" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TreeDestruction" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FarmDestruction" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="cutscene_ended" from="Monster_Summoning" to="." method="_on_Monster_Summoning_cutscene_ended"]
[connection signal="cutscene_ended" from="BarsSummonning" to="." method="_on_BarsSummonning_cutscene_ended"]
[connection signal="cutscene_ended" from="MovingRockAnimation" to="." method="_on_MovingRockAnimation_cutscene_ended"]
[connection signal="cutscene_ended" from="TreeDestruction" to="." method="_on_TreeDestruction_cutscene_ended"]
[connection signal="cutscene_ended" from="FarmDestruction" to="." method="_on_FarmDestruction_cutscene_ended"]
